[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "m21ctools"
version = "0.1.0"
description = "Tools for processing cubed-sphere data."
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name="Your Name", email="your.email@example.com" }
]
dependencies = [
    "xarray",
    "numpy",
    "matplotlib",
    "cartopy",
    "scipy"
]

[project.urls]
Homepage = "https://github.com/yourusername/m21ctools"
