[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["m21ctools"]

[project]
name = "m21ctools"
version = "0.1.32"
description = "Tools for processing cubed-sphere data."
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name="Sabin Adhikari", email="sbn.adh@gmail.com" }
]
dependencies = [
    "xarray",
    "numpy",
    "matplotlib",
    "cartopy",
    "scipy"
]

[project.urls]
Homepage = "https://github.com/sabin413/m21ctools"
